<resources>
    <string name="app_name">一皆通</string>
    <!--主菜单-->
    <string name="app_home_collect_money_label">收款</string>
    <string name="app_home_account_book_label">账本</string>
    <string name="app_home_shop_label">商铺</string>
    <string name="app_home_profile_label">设置</string>
    <!--欢迎-->
    <string name="welcome_message">欢迎%1$s</string>

    <!--error msg-->
    <string name="error_network">网络不给力</string>
    <string name="no_network">网络无法连接</string>
    <string name="error_server">server 异常</string>
    <string name="error_json">数据非法</string>
    <!--dialog-->
    <string name="dialog_ok_btn">确定</string>
    <string name="dialog_cancel_btn">取消</string>
    <string name="Sure">确认</string>
    <string name="cancel">取消</string>
    <string name="exist">退出</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_reset_label">清空</string>
    <string name="alipay">支付宝</string>
    <string name="weixin">微信</string>
    <string name="money">现金支付</string>
    <string name="SMF">什码付</string>
    <string name="clear">清空</string>

    <!--app 窗口title-->
    <string name="title_login">登录</string>
    <string name="title_pay_detail">收款详情</string>
    <string name="title_store_info">门店信息</string>
    <!--login str-->
    <string name="mLoginLabel">登录</string>
    <string name="mForgetPwdLabel">忘记密码 >></string>
    <string name="mLoginAccountHint">请输入手机号</string>
    <string name="mLoginPasswordHint">请输入密码</string>
    <string name="mLoginInputEmptyMsg">请输入用户名和密码</string>
    <string name="mLoginUserPermissionLowMsg">您没有绑定门店信息</string>


    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <!-- profile str-->
    <string name="mProfileLogoutBtn">退出登录</string>
    <string name="mStoreChoseBtn">切换门店</string>
    <string name="qr_scanner">扫一扫</string>
    <string name="qr_code">付款码</string>

    <string name="call_phone">拨打电话</string>
    <string name="doLogout">退出登录</string>

    <!--收款状态-->
    <string name="mCollectMoneySuccessLabel">收款成功</string>
    <string name="mCollectMoneyFailLabel">收款失败</string>
    <string name="mQrScannerAlipayGuideHintLabel">将客户支付宝付款码放入框中，即可收款</string>
    <string name="mQrCodeAlipayGuideHintLabel">请使用客户支付宝扫描以上二维码完成付款</string>
    <string name="mQrScannerWeixinGuideHintLabel">将客户微信付款码放入框中，即可收款</string>
    <string name="mQrCodeWeixinGuideHintLabel">请使用客户微信扫描以上二维码完成付款</string>
    <string name="title_qr_code_manager">什码付管理</string>
    <string name="title_qr_shenma">什码付</string>
    <string name="title_bind_qr_code">绑定什码付</string>
    <string name="mEnvironmentSettingsLabel">环境设置</string>


</resources>
